# sudoku

./: .gitignore  CMakeLists.txt  README.md
include/: dyn_assert.h  sudoku_class.h  sudoku_print.h  sudoku_read.h  sudoku_solve.h  sudoku_solve_helper.h
input/: sudoku.in.6x6  sudoku.in.9x9_17-vorbelegt  sudoku.in.9x9_21-vorbelegt  sudoku.in.9x9_with_hidden_single  sudoku.in.9x9_with_hidden_single_easy  sudoku.in.9x9_with_hidden_twin  sudoku.in_singles-only
source/: dyn_assert.cpp  main.cpp  sudoku_class.cpp  sudoku_print.cpp  sudoku_solve.cpp  sudoku_solve_helper.cpp
